--- a/application/views/admin/menu/banner.html
+++ b/application/views/admin/menu/banner.html
@@ -129,7 +129,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12">
+          <div class="col-md-12" hidden>
             <label>Publikasi</label>
             <div class="form-group">
               <input id="stat" type="checkbox" name="user-input" checked data-bootstrap-switch data-off-color="danger" data-on-color="success" data-on-label="Ready" data-off-label="Not Ready">
