update filter action dan unhide input publikasi

--- a/application/views/admin/menu/agenda.html
+++ b/application/views/admin/menu/agenda.html
@@ -89,7 +89,7 @@
 
         <div class="row">
 
-          <div class="col-md-12" hidden>
+          <div class="col-md-12">
             <label>Publikasi</label>
             <div class="form-group">
               <input id="stat" type="checkbox" name="user-input" checked data-bootstrap-switch data-off-color="danger" data-on-color="success" data-on-label="Ready" data-off-label="Not Ready">
