--- a/application/views/admin/menu/kontak.html
+++ b/application/views/admin/menu/kontak.html
@@ -27,17 +27,17 @@
           <div class="card-header">
             <h3 class="card-title"></h3>
 
-            <div class="card-tools">
+            <!-- <div class="card-tools">
               <div class="input-group input-group-sm">
                   <div class="btn btn-info" id="add-foto">
                     <i class="fas fa-plus"></i><span> Tambah Kontak</span>
                   </div>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="card-body">
             <input id="param" value="" hidden>
-            <table class="table table-bordered table-hover" id="listfoto">
+            <table class="table table-bordered table-hover" id="listkontak">
                 <thead>
                     <tr>
                         <th>
