--- a/application/views/admin/menu/banner.html
+++ b/application/views/admin/menu/banner.html
@@ -116,7 +116,7 @@
                 <button type="button" id="hal" class="btn btn-info">Halaman</button>
               </div>
             </div>
-            <input type="text" id="tipe" value="link" hidden>
+            <input type="text" id="tipe-" value="link" hidden>
             <div>
               <div class="form-group" id="form-link">
                 <label>Link Teks</label>
@@ -127,6 +127,18 @@
                 <textarea class="summernote" id="halaman">
                 </textarea>
               </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group">
+              <label>Tipe</label>
+              <select id="param-type" class="form-control select2bs4" style="width: 100%;">
+                <option value="0">-Pilih-</option>
+                <option value="1">Home</option>
+                <option value="2">Tentang</option>
+                <option value="3">Produk</option>
+                <option value="4">Galeri</option>
+              </select>
             </div>
           </div>
           <div class="col-md-12">
