--- a/application/views/admin/sidebar.html
+++ b/application/views/admin/sidebar.html
@@ -14,7 +14,7 @@
           <img src="assets/img/users/default.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">{{name}}</a>
+          <a href="#" class="d-block" style="white-space:normal!important;">{{name}}</a>
         </div>
       </div>
 
