--- a/application/views/admin/menu/berita.html
+++ b/application/views/admin/menu/berita.html
@@ -168,13 +168,15 @@
               <label>Bagian</label>
               <select id="bagian" class="form-control select2bs4" style="width: 100%;">
                 <option value="0">-Pilih-</option>
-                <option value="1">SETDITJEN</option>
-                <option value="2">TIDUR</option>
-                <option value="3">BPB</option>
-                <option value="4">PKP</option>
-                <option value="5">PPLP</option>
-                <option value="6">PSPAM</option>
-                <option value="7">PSP-POP</option>
+                <option value="622213">SEKRETARIAT DIREKTORAT JENDERAL CIPTA KARYA </option>
+                <option value="631097">PUSAT PENGEMBANGAN SARANA PRASARANA PENDIDIKAN, OLAHRAGA DAN PASAR </option>
+                <option value="420138">DIREKTORAT BINA TEKNIK PERMUKIMAN DAN PERUMAHAN </option>
+                <option value="420139">DIREKTORAT KEPATUHAN INTERN </option>
+                <option value="452771">DIREKTORAT PENGEMBANGAN KAWASAN PERMUKIMAN </option>
+                <option value="452780">DIREKTORAT BINA PENATAAN BANGUNAN </option>
+                <option value="466162">DIREKTORAT KETERPADUAN INFRASTRUKTUR PERMUKIMAN </option>
+                <option value="466178">DIREKTORAT AIR MINUM </option>
+                <option value="466190">DIREKTORAT SANITASI </option>
 
               </select>
             </div>
