--- a/application/views/admin/sidebar.html
+++ b/application/views/admin/sidebar.html
@@ -10,12 +10,20 @@
     <div class="sidebar">
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="assets/img/users/default.jpg" class="img-circle elevation-2" alt="User Image">
+        <div class="row">
+          <div class="col-sm-12" style="margin-left: 35%;margin-right: 75%;">
+            <div class="image">
+              <img src="assets/img/users/default.jpg" class="img-circle elevation-2" alt="User Image">
+            </div>
+          </div>
+          <div class="col-sm-12">
+            <div class="info" style="white-space:normal!important; text-align: center;">
+              <a href="#" class="d-block">{{name}}</a>
+            </div>
+          </div>
         </div>
-        <div class="info">
-          <a href="#" class="d-block" style="white-space:normal!important;">{{name}}</a>
-        </div>
+        
+
       </div>
 
       <!-- SidebarSearch Form -->
