add menu icon, add api getkategori, add param kategori

--- a/application/views/admin/sidebar.html
+++ b/application/views/admin/sidebar.html
@@ -1,170 +1,190 @@
-  <!-- Main Sidebar Container -->
-  <aside class="main-sidebar sidebar-light-navy elevation-4">
-    <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
-      <img src="assets/img/logo/Logo-PUCK.png" alt="AdminLTE Logo" class="brand-image" style="opacity: .8">
-      <span class="brand-text font-weight-light"></span>
-    </a>
+<!-- Main Sidebar Container -->
+<aside class="main-sidebar sidebar-light-navy elevation-4">
+	<!-- Brand Logo -->
+	<a href="index3.html" class="brand-link">
+		<img
+			src="assets/img/logo/Logo-PUCK.png"
+			alt="AdminLTE Logo"
+			class="brand-image"
+			style="opacity: 0.8"
+		/>
+		<span class="brand-text font-weight-light"></span>
+	</a>
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar user panel (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="assets/img/users/default.jpg" class="img-circle elevation-2" alt="User Image">
-        </div>
-        <div class="info">
-          <a href="#" class="d-block">{{name}}</a>
-        </div>
-      </div>
+	<!-- Sidebar -->
+	<div class="sidebar">
+		<!-- Sidebar user panel (optional) -->
+		<div class="user-panel mt-3 pb-3 mb-3 d-flex">
+			<div class="image">
+				<img
+					src="assets/img/users/default.jpg"
+					class="img-circle elevation-2"
+					alt="User Image"
+				/>
+			</div>
+			<div class="info">
+				<a href="#" class="d-block">{{name}}</a>
+			</div>
+		</div>
 
-      <!-- SidebarSearch Form -->
-      <div class="form-inline" hidden>
-        <div class="input-group" data-widget="sidebar-search">
-          <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
-          <div class="input-group-append">
-            <button class="btn btn-sidebar">
-              <i class="fas fa-search fa-fw"></i>
-            </button>
-          </div>
-        </div>
-      </div>
+		<!-- SidebarSearch Form -->
+		<div class="form-inline" hidden>
+			<div class="input-group" data-widget="sidebar-search">
+				<input
+					class="form-control form-control-sidebar"
+					type="search"
+					placeholder="Search"
+					aria-label="Search"
+				/>
+				<div class="input-group-append">
+					<button class="btn btn-sidebar">
+						<i class="fas fa-search fa-fw"></i>
+					</button>
+				</div>
+			</div>
+		</div>
 
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-          <!-- Add icons to the links using the .nav-icon class
+		<!-- Sidebar Menu -->
+		<nav class="mt-2">
+			<ul
+				class="nav nav-pills nav-sidebar flex-column"
+				data-widget="treeview"
+				role="menu"
+				data-accordion="false"
+			>
+				<!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item" id="dashboard">
-            <a href="dashboard" class="nav-link">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
-              <p>
-                Dashboard
-              </p>
-            </a>
-            
-          </li>
-          <li class="nav-item" id="berita" >
-            <a href="berita" class="nav-link">
-              <i class="nav-icon fas fa-newspaper"></i>
-              <p>
-                Berita
-                <!-- <span class="right badge badge-danger">New</span> -->
-              </p>
-            </a>
-          </li>
-          <li class="nav-item" id="info">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-info-circle"></i>
-              <p>
-                Info
-                <i class="fas fa-angle-left right"></i>
-                <!-- <span class="badge badge-info right">6</span> -->
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item" id="profile">
-                <a href="profile" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Profile</p>
-                </a>
-              </li>
-              <li class="nav-item" id="infobalai">
-                <a href="infobalai" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Info Balai</p>
-                </a>
-              </li>
-              <li class="nav-item" id="kontak">
-                <a href="kontak" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Kontak</p>
-                </a>
-              </li>
-              <li class="nav-item" id="banner">
-                <a href="banner" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Banner</p>
-                </a>
-              </li>
-              <li class="nav-item" id="runningtext">
-                <a href="runningtext" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Running Text</p>
-                </a>
-              </li>
-              <li class="nav-item" id="bukuprofile">
-                <a href="bukuprofile" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Buku Profile</p>
-                </a>
-              </li>
-              <li class="nav-item" id="infografis">
-                <a href="infografis" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Infografis</p>
-                </a>
-              </li>
-              <li class="nav-item" id="agenda">
-                <a href="agenda" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Agenda</p>
-                </a>
-              </li>
-              <li class="nav-item" id="produklaporan">
-                <a href="produklaporan" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Produk Laporan</p>
-                </a>
-              </li>
-              
-            </ul>
-          </li>
-          <li class="nav-item" id="galeri">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-photo-video"></i>
-              <p>
-                Galeri
-                <i class="fas fa-angle-left right"></i>
-                <!-- <span class="badge badge-info right">6</span> -->
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item" id="poster">
-                <a href="poster" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Poster</p>
-                </a>
-              </li>
-              <li class="nav-item" id="foto">
-                <a href="foto" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Foto</p>
-                </a>
-              </li>
-              <li class="nav-item" id="video">
-                <a href="video" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Video</p>
-                </a>
-              </li>
-            </ul>
-          </li>
-          {% if role == 10 %}
-          <li class="nav-item" id="users" >
-            <a href="users" class="nav-link">
-              <i class="nav-icon fas fa-users"></i>
-              <p>
-                Users
-                <!-- <span class="right badge badge-danger">New</span> -->
-              </p>
-            </a>
-          </li>
-          {% endif %}
-          
-        </ul>
-      </nav>
-      <!-- /.sidebar-menu -->
-    </div>
-    <!-- /.sidebar -->
-  </aside>
+				<li class="nav-item" id="dashboard">
+					<a href="dashboard" class="nav-link">
+						<i class="nav-icon fas fa-tachometer-alt"></i>
+						<p>Dashboard</p>
+					</a>
+				</li>
+				<li class="nav-item" id="berita">
+					<a href="berita" class="nav-link">
+						<i class="nav-icon fas fa-newspaper"></i>
+						<p>
+							Berita
+							<!-- <span class="right badge badge-danger">New</span> -->
+						</p>
+					</a>
+				</li>
+				<li class="nav-item" id="info">
+					<a href="#" class="nav-link">
+						<i class="nav-icon fas fa-info-circle"></i>
+						<p>
+							Info
+							<i class="fas fa-angle-left right"></i>
+							<!-- <span class="badge badge-info right">6</span> -->
+						</p>
+					</a>
+					<ul class="nav nav-treeview">
+						<li class="nav-item" id="profile">
+							<a href="profile" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Profile</p>
+							</a>
+						</li>
+						<li class="nav-item" id="infobalai">
+							<a href="infobalai" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Info Balai</p>
+							</a>
+						</li>
+						<li class="nav-item" id="kontak">
+							<a href="kontak" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Kontak</p>
+							</a>
+						</li>
+						<li class="nav-item" id="banner">
+							<a href="banner" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Banner</p>
+							</a>
+						</li>
+						<li class="nav-item" id="runningtext">
+							<a href="runningtext" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Running Text</p>
+							</a>
+						</li>
+						<li class="nav-item" id="bukuprofile">
+							<a href="bukuprofile" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Buku Profile</p>
+							</a>
+						</li>
+						<li class="nav-item" id="infografis">
+							<a href="infografis" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Infografis</p>
+							</a>
+						</li>
+						<li class="nav-item" id="agenda">
+							<a href="agenda" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Agenda</p>
+							</a>
+						</li>
+						<li class="nav-item" id="produklaporan">
+							<a href="produklaporan" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Produk Laporan</p>
+							</a>
+						</li>
+						<li class="nav-item" id="iconpage">
+							<a href="icon" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Icon</p>
+							</a>
+						</li>
+					</ul>
+				</li>
+				<li class="nav-item" id="galeri">
+					<a href="#" class="nav-link">
+						<i class="nav-icon fas fa-photo-video"></i>
+						<p>
+							Galeri
+							<i class="fas fa-angle-left right"></i>
+							<!-- <span class="badge badge-info right">6</span> -->
+						</p>
+					</a>
+					<ul class="nav nav-treeview">
+						<li class="nav-item" id="poster">
+							<a href="poster" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Poster</p>
+							</a>
+						</li>
+						<li class="nav-item" id="foto">
+							<a href="foto" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Foto</p>
+							</a>
+						</li>
+						<li class="nav-item" id="video">
+							<a href="video" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Video</p>
+							</a>
+						</li>
+					</ul>
+				</li>
+				{% if role == 10 %}
+				<li class="nav-item" id="users">
+					<a href="users" class="nav-link">
+						<i class="nav-icon fas fa-users"></i>
+						<p>
+							Users
+							<!-- <span class="right badge badge-danger">New</span> -->
+						</p>
+					</a>
+				</li>
+				{% endif %}
+			</ul>
+		</nav>
+		<!-- /.sidebar-menu -->
+	</div>
+	<!-- /.sidebar -->
+</aside>
