add buletin menu and api

--- a/application/views/admin/sidebar.html
+++ b/application/views/admin/sidebar.html
@@ -11,25 +11,30 @@
 		<span class="brand-text font-weight-light"></span>
 	</a>
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar user panel (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="row">
-          <div class="col-sm-12" style="margin-left: 35%;margin-right: 75%;">
-            <div class="image">
-              <img src="assets/img/users/default.jpg" class="img-circle elevation-2" alt="User Image">
-            </div>
-          </div>
-          <div class="col-sm-12">
-            <div class="info" style="white-space:normal!important; text-align: center;">
-              <a href="#" class="d-block">{{name}}</a>
-            </div>
-          </div>
-        </div>
-        
-
-      </div>
+	<!-- Sidebar -->
+	<div class="sidebar">
+		<!-- Sidebar user panel (optional) -->
+		<div class="user-panel mt-3 pb-3 mb-3 d-flex">
+			<div class="row">
+				<div class="col-sm-12" style="margin-left: 35%; margin-right: 75%">
+					<div class="image">
+						<img
+							src="assets/img/users/default.jpg"
+							class="img-circle elevation-2"
+							alt="User Image"
+						/>
+					</div>
+				</div>
+				<div class="col-sm-12">
+					<div
+						class="info"
+						style="white-space: normal !important; text-align: center"
+					>
+						<a href="#" class="d-block">{{name}}</a>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- SidebarSearch Form -->
 		<div class="form-inline" hidden>
@@ -171,6 +176,12 @@
 							<a href="video" class="nav-link">
 								<i class="far fa-circle nav-icon"></i>
 								<p>Video</p>
+							</a>
+						</li>
+						<li class="nav-item" id="buletin">
+							<a href="buletin" class="nav-link">
+								<i class="far fa-circle nav-icon"></i>
+								<p>Buletin</p>
 							</a>
 						</li>
 					</ul>
